@@ -8,4 +8,4 @@ var:
     default: ""
 
 ingest_pipeline: ingest/pipeline.json
-prospector: config/slowlog.yml
+input: config/slowlog.yml
